# RepoTutorStudio

./: .gitignore  .gitleaks.toml  AGENTS.md  DESIGN.md  DEVELOPMENT_BRIEF.txt  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  repo-policy.md  vitest.config.ts  working.md
adapters/cli-anything/: package.json
apps/cli/: package.json
apps/desktop-tauri/: index.html  package.json  tsconfig.node.json  vite.config.ts
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  runtime.rs  sidecar.rs
docs/audits/: compliance-audit-01.json  (+26 more)
scripts/: benchmark-study.mjs  build-desktop-sidecar-bundle.mjs  compliance-audit.mjs  install-local.mjs  verify-desktop-app-build-smoke.mjs  verify-desktop-bundled-rust-sidecar-smoke.mjs  verify-desktop-bundled-sidecar-smoke.mjs  verify-desktop-runtime-bundle.mjs  verify-desktop-rust-sidecar-smoke.mjs  verify-desktop-sidecar-discovery-smoke.mjs  verify-desktop-sidecar-smoke.mjs  verify-desktop-signing.mjs  verify-desktop-tauri-commands-smoke.mjs  verify-entrypoints-smoke.mjs  verify-github-study-smoke.mjs  verify-goal-completion-smoke.mjs  verify-learning-targets.mjs  verify-local-install.mjs  verify-private-history-boundary.mjs  verify-production.mjs  verify-pruned-session-full-flow.mjs  verify-public-git-history.mjs  verify-public-sanitized-source.mjs  verify-security-current-tree.mjs  verify-skill-output-smoke.mjs  verify-skill-wrapper-smoke.mjs  verify-source-intake-smoke.mjs  verify-source-mode-study-smoke.mjs  verify-zip-study-smoke.mjs
(+50 files in other folders)
