[package]
name = "repotutor-studio"
version = "0.1.0"
description = "RepoTutor Studio desktop app"
authors = ["Veritas-7"]
edition = "2021"

[lib]
name = "repotutor_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.0", features = [] }

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }
